data/collection/fixes/descriptions/scala/scala-6846
```scala
ticket/6745-3 ~/code/scala scalac210 sandbox/test.scala
sandbox/test.scala:7: error: polymorphic expression cannot be instantiated to expected type;
 found   : [M[_], A]Test.Arb[M[A]]
 required: Test.Arb[Test.ListInt]
  foo: Arb[ListInt]
  ^
one error found
ticket/6745-3 ~/code/scala scalac29 sandbox/test.scala
ticket/6745-3 ~/code/scala cat !$
cat sandbox/test.scala
object Test {
  class Arb[_]
  implicit def foo[M[_], A]: Arb[M[A]] = null
  foo: Arb[List[Int]]

  type ListInt = List[Int]
  foo: Arb[ListInt]
}
```